--- a/RelatedProductsApi/src/RelatedProductsApi/RelatedProductsApi.csproj
+++ b/RelatedProductsApi/src/RelatedProductsApi/RelatedProductsApi.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.7" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
 	  <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
 		  <PrivateAssets>All</PrivateAssets>
@@ -16,7 +17,6 @@
   <ItemGroup>
     <Folder Include="Controllers\" />
     <Folder Include="DataProviders\Abstractions\" />
-    <Folder Include="Data\" />
     <Folder Include="Models\" />
     <Folder Include="Services\Abstractions\" />
   </ItemGroup>
