--- a/RelatedProductsApi/services/RelatedProductsApi.Service/RelatedProductsApi.Service.csproj
+++ b/RelatedProductsApi/services/RelatedProductsApi.Service/RelatedProductsApi.Service.csproj
@@ -11,6 +11,10 @@
   	  <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
 		  <PrivateAssets>All</PrivateAssets>
 	  </PackageReference>
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.7">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	  </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
