--- a/RelatedProductsApi/services/RelatedProductsApi.Service/config.json
+++ b/RelatedProductsApi/services/RelatedProductsApi.Service/config.json
@@ -1,6 +1,5 @@
 {
   "RelatedProductsApi": {
-    "ConnectionString": "server=192.168.1.120;port=5433;database=relatedproductsapi;uid=postgres;password=postgres;",
-    "PageSize": 20
+    "ConnectionString": "server=192.168.1.120;port=5433;database=relatedproductsapi;uid=postgres;password=postgres;"
   }
 }
